syntax = "proto3";

option go_package = "github.com/1garo/nunet/pb";

// Define the gRPC service
service Deployer {
    rpc DeployJob(JobRequest) returns (JobResponse) {}
}

message JobRequest {
    string program_name = 1;
    repeated string arguments = 2;
    bool replicated = 3;
}

message JobResponse {
    bool deployed = 1;
}

